nyxClient/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  rules:
    - host: nyx-master
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nyxmaster-client-clusterip
                port:
                  number: 80
